--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             <div class="container2">
                 
                 <br><br><h1>Results and Announcments</h1><br>
-<img src="./assets/announcement.png" alt="announcement"> <link href="" >Higher secoundry school part-II annual examination<br><br>
-<img src="./assets/announcement.png" alt="announcement" > <link href="" >Higher secoundry school part-II annual examination<br><br>
-<img src="./assets/announcement.png" alt="announcement"> <link href="" >Higher secoundry school part-II annual examination<br><br>
-<img src="./assets/announcement.png" alt="announcement" > <link href="" >Higher secoundry school part-II annual examination<br><br>
+<img src="./assets/announcement.png" alt="announcement"> <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
+<img src="./assets/announcement.png" alt="announcement" > <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
+<img src="./assets/announcement.png" alt="announcement"> <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
+<img src="./assets/announcement.png" alt="announcement" > <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
 
             </div>
     
