--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     </div>
             <div class="container1">
-                <h1>Officers</h1>
+                <h1>Officers</h1><br>
                 <div class="row">
                     <div class="col">
                         <img src="./assets/image 4.png" alt="image" >
