--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+   
     <title>Document</title>
 </head>
 
@@ -36,7 +37,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-secondary" type="submit">Login</button>
+                    <button id="LoginForm" class="btn btn-secondary" type="submit"><link rel="stylesheet" href="login.html"> Login</button>
                 </form>
             </div>
         </div>
@@ -109,7 +110,6 @@
 <img src="./assets/announcement.png" alt="announcement" > <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
 <img src="./assets/announcement.png" alt="announcement"> <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
 <img src="./assets/announcement.png" alt="announcement" > <link href="index.html" >Higher secoundry school part-II annual examination<br><br>
-
             </div>
     
 </body>
